# hello_crocoddyl

./: .gitignore  CMakeLists.txt  README.md  bench_croco.py  mpc_panda_reaching.py  ocp_panda_reaching.py  ocp_pbe_def.py  perf_ocp_panda_reaching.py  pin_utils.py  test_weight_schedule.py  weight_schedule.py
config/: config.yaml
scripts/: compare_panda_models.py  config_panda.py  gviewer_mpc.py  mpc_panda_reaching.py  ocp_panda_reaching.py  ocp_pbe_def.py  ocp_utils.py  perf_ocp_panda_reaching.py  pinocchio_sim.py  plot_results_cpp.py  pybullet_sim.py  test_weight_schedule.py  utils.py
src/: crocoddyl_reaching.h  main_reaching.cpp  utils.h
